--- a/css/styles.css
+++ b/css/styles.css
@@ -31,6 +31,11 @@ li a{
     color: #111;
 }
 
+li a:hover:not(.active) {
+    background-color: #111;
+    color: white;
+}
+
 #grad {
     background-image: linear-gradient(to right, rgba(255,0,0,0.2), rgba(255,0,0,1));
 }
