--- a/css/styles.css
+++ b/css/styles.css
@@ -39,3 +39,72 @@ li a:hover:not(.active) {
 #grad {
     background-image: linear-gradient(to right, rgba(255,0,0,0.2), rgba(255,0,0,1));
 }
+
+
+
+
+/* top-container */
+
+.top-container {
+    display: grid;
+    margin-top: 100px;
+    grid-template-columns: auto auto;
+    text-align: center;
+    /* overflow: auto; */
+}
+
+.software-engineer {
+    background-color: lightpink;
+    width: 50%;
+    margin: auto;
+    border-radius: 10px;
+    color: red;
+    padding: 20px;
+    margin-bottom: 20px;
+    /* margin-left: auto;
+    margin-right: auto; */
+}
+
+#profile-image {
+    width: 300px;
+}
+
+
+
+
+/* button - font-awesome */
+.btn {
+    background: #11cdd4;
+    background-image: -webkit-linear-gradient(top, #11cdd4, #2bc4ad);
+    background-image: -moz-linear-gradient(top, #11cdd4, #2bc4ad);
+    background-image: -ms-linear-gradient(top, #11cdd4, #2bc4ad);
+    background-image: -o-linear-gradient(top, #11cdd4, #2bc4ad);
+    background-image: linear-gradient(to bottom, #11cdd4, #2bc4ad);
+    -webkit-border-radius: 8;
+    -moz-border-radius: 8;
+    border-radius: 8px;
+    font-family: 'Caveat Brush', cursive;
+    color: #ffffff;
+    font-size: 20px;
+    padding: 10px 20px 10px 20px;
+    text-decoration: none;
+  }
+  
+  .btn:hover {
+    background: #3cb0fd;
+    background-image: -webkit-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -moz-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -ms-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: -o-linear-gradient(top, #3cb0fd, #3498db);
+    background-image: linear-gradient(to bottom, #3cb0fd, #3498db);
+    text-decoration: none;
+  }
+
+
+  /* icon  */
+  .icon {
+    /* margin: ; */
+    display: inline-block;
+    padding: 20px;
+    color: #3cb0fd;
+  }
