--- a/css/styles.css
+++ b/css/styles.css
@@ -46,12 +46,33 @@ li a:hover:not(.active) {
 /* top-container */
 
 .top-container {
-    display: grid;
-    margin-top: 100px;
-    grid-template-columns: auto auto;
+    display: flex;
+    padding: 100px;
+    /* grid-template-columns: auto auto; */
+    justify-content: space-evenly;
+    align-items: center;
     text-align: center;
-    /* overflow: auto; */
+    flex-wrap: wrap;
 }
+
+.tcc1 {
+    padding: 20px;
+    min-width: 500px;
+}
+
+.btn-flex {
+    display: flex;
+    justify-content: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.tcc2 {
+    padding: 20px;
+    min-width: 500px;
+}
+
+
 
 .software-engineer {
     background-color: lightpink;
@@ -68,6 +89,74 @@ li a:hover:not(.active) {
 #profile-image {
     width: 300px;
 }
+
+
+/* middle-container */
+
+.middle-container {
+    border-radius: 0px 100px 0px 100px;
+    background-color: #3cb0fd;
+    text-align: center;
+    padding: 20px 0px;
+    /* color: white; */
+}
+
+.about-me {
+    font-family: 'Oswald', sans-serif;
+    /* text-align: justify; */
+    color: #111;
+    width: 450px;
+    margin: auto;
+}
+
+
+
+
+
+
+
+
+
+.skill-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    font-family: 'Oswald', sans-serif;
+    text-align: center;
+
+}
+
+.skills {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    gap: 5px;
+
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    padding: 10px;
+    
+    width: 300px;
+    height: 200px;
+}
+
+
+
+
+
+/* footer  */
+.footer {
+    margin-top: 100px;
+    background-color: #11cdd4;
+    padding: 100px;
+    text-align: center;
+}
+
+
+
+
 
 
 
