--- a/css/blog_styles.css
+++ b/css/blog_styles.css
@@ -9,6 +9,9 @@ body {
     font-family: 'Caveat Brush', cursive;
     margin: 0;
     padding: 0;
+    background-image: url(/image/top\ background.png), linear-gradient(#172530, #4e7da1);
+    background-size: contain;
+    background-repeat: no-repeat;
 }
 
 /* navigation-bar */ 
@@ -46,6 +49,8 @@ body {
 }
 
 .navigation .nav-left ul li a {
+    text-decoration: none;
+    color: white;
     font-family: var(--font3);
     font-size: 20px;
 }
@@ -56,4 +61,102 @@ body {
     justify-content: space-between;
     align-items: center;
     gap: 10px;
+}
+
+
+
+
+
+
+
+/* container no.1  */
+
+.container-1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap-reverse;    
+    background-image: url(/image/top\ background.png);
+    background-size: cover;
+    padding: 0px 10px;
+    border-radius: 10px;
+    /* background-color: #9e9e9e; */
+}
+
+.container-1 .left {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    max-width: 500px;
+}
+
+.container-1 .right {
+    width: 500px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.container-1 .right img {
+    width: 300px;
+    border-radius: 10px;
+    margin: 0;
+    padding: 0;
+}
+
+
+
+/* feature projects  */
+
+.project-container {
+    background-image: linear-gradient(to right, #4e7da1, white);
+    padding: 10px 10px;
+}
+
+.project {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    gap: 20px;
+    flex-wrap: wrap;
+}
+
+.project-description {
+    max-width: 500px;
+}
+
+.project-photo {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    /* width: 500px; */
+}
+
+.project-photo img {
+    width: 200px;
+    border-radius: 10px;
+}
+
+
+
+/* footer  */
+footer {
+    text-align: center;
+    padding: 20px;
+    background-color: #4e7da1;
+    color: white;
+  }
+
+  
+.footer-social-icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 10px;
+}
+
+.footer-icon {
+    color: white;
+    padding: 10px;
 }
