--- a/css/styles.css
+++ b/css/styles.css
@@ -257,6 +257,29 @@ nav .menu-btn {
     text-decoration: underline;
 }
 
+/* Technical Stack Section */
+.stacks {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.stacks > div {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 1em;
+    margin: 1em;
+    padding: 0.5em 1em;
+    background: #414556;
+    border-radius: 1em;
+    transition: 0.4s;
+}
+
+.stacks > div:hover {
+    background: #ffaf29;
+}
+
 
 /* Contact Section */
 .sponsors {
@@ -284,7 +307,7 @@ nav .menu-btn {
 }
 
 .portfolio .container {
-    display: grid;
+    display: flex;
     justify-content: space-between;
     align-items: flex-start;
 }
@@ -304,6 +327,7 @@ nav .menu-btn {
 .card {
     background: #252734;
     position: relative;
+    overflow: hidden;
     height: 30em;
     transition: 0.3s;
 }
@@ -312,13 +336,17 @@ nav .menu-btn {
     padding: 1.5em;
     display: flex;
     justify-content: space-between;
+    width: 70%;
+    background: rgba(0, 0, 0, 0.5);
+    border-bottom-left-radius: 1em;
     align-items: center;
-    position: relative;
+    position: absolute;
+    right: 0;
+    top: 0;
     z-index: 1;
 }
 
 .card img {
-    width: 100%;
     height: 100%;
     position: absolute;
     left: 0;
@@ -327,8 +355,10 @@ nav .menu-btn {
 }
 
 .portfolio .card-link:hover .card {
-    transform: translateY(-3em);
+    transform: translateY(3em);
 }
+
+
 
 
 /* Blog Section */
